--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "amqplib": "^0.10.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
